@@ -1,6 +1,7 @@
 Audio.CreateDevice.desc = Creating audio output device
 Audio.DestroyDevice.desc = Removing audio output device {0}
 Audio.EnableDevice.desc = Changing the Active state of audio device {0}
+Audio.GetDriverParametersInfo.desc = Getting audio driver information
 Audio.GetDrivers.desc= Getting Audio Output Drivers
 Audio.SetChannelCount.desc = Changing the channels number of audio device {0}
 Audio.SetChannelParameter.desc = Changing audio output channel parameter
@@ -72,6 +73,7 @@ Midi.AddMidiInstrumentMap.desc = Adding MIDI instrument map
 Midi.CreateDevice.desc = Creating MIDI input device
 Midi.DestroyDevice.desc = Removing MIDI input device {0}
 Midi.EnableDevice.desc = Changing the Active state of MIDI device {0}
+Midi.GetDriverParametersInfo.desc = Getting MIDI driver information
 Midi.GetDrivers.desc = Getting MIDI Input Drivers
 Midi.GetInstrumentMaps.desc = Getting MIDI instrument maps
 Midi.MapInstrument.desc = Mapping MIDI instrument
