@@ -52,10 +52,14 @@ import net.sf.juife.event.TaskListener;
 import org.jsampler.CC;
 import org.jsampler.JSPrefs;
 
+import org.jsampler.event.ParameterEvent;
+import org.jsampler.event.ParameterListener;
+
 import org.jsampler.task.Midi;
 import org.jsampler.view.ParameterTable;
 
 import org.linuxsampler.lscp.MidiInputDriver;
+import org.linuxsampler.lscp.Parameter;
 
 import static org.jsampler.view.std.StdI18n.i18n;
 import static org.jsampler.view.std.StdPrefs.*;
@@ -103,6 +107,13 @@ public class JSNewMidiDeviceDlg extends EnhancedDialog {
 		
 		parameterTable.getModel().setEditFixedParameters(true);
 		
+		parameterTable.getModel().addParameterListener(new ParameterListener() {
+			public void
+			parameterChanged(ParameterEvent e) {
+				updateParameters();
+			}
+		});
+		
 		cbDrivers.addActionListener(new ActionListener() {
 			public void
 			actionPerformed(ActionEvent e) {
@@ -111,6 +122,7 @@ public class JSNewMidiDeviceDlg extends EnhancedDialog {
 				
 				cbDrivers.setToolTipText(d.getDescription());
 				parameterTable.getModel().setParameters(d.getParameters());
+				updateParameters();
 			}
 		});
 		
@@ -175,6 +187,40 @@ public class JSNewMidiDeviceDlg extends EnhancedDialog {
 			public void
 			windowActivated(WindowEvent e) { btnCreate.requestFocusInWindow(); }
 		});
+	}
+	
+	private void
+	updateParameters() {
+		MidiInputDriver d = (MidiInputDriver)cbDrivers.getSelectedItem();
+		if(d == null) return;
+		
+		final Parameter[] parameters = parameterTable.getModel().getParameters();
+		
+		final Midi.GetDriverParametersInfo task =
+			new Midi.GetDriverParametersInfo(d.getName(), parameters);
+		
+		task.addTaskListener(new TaskListener() {
+			public void
+			taskPerformed(TaskEvent e) {
+				if(task.doneWithErrors()) return;
+				for(Parameter p : parameters) {
+					for(Parameter p2 : task.getResult()) {
+						if(p2.getName().equals(p.getName())) {
+							p2.setValue(p.getValue());
+							if(p2.getValue() == null) {
+								p2.setValue(p2.getDefault());
+							}
+							break;
+						}
+						
+					}
+				}
+				
+				parameterTable.getModel().setParameters(task.getResult());
+			}
+		});
+		
+		CC.getTaskQueue().add(task);
 	}
 	
 	protected void
